--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -4,12 +4,8 @@ html, body {
   height: 100%;
 }
 
-nav ul {
- margin-left: 0;
-}
-
 .top-bar .name h1 a {
-  padding: 0;
+  padding-left: .9375rem;
 }
 
 .graphic-designer {
